Added reference fields, and 3D binding energy

--- a/amo/examples/plot_q1d_scattering_amplitudes.ipynb
+++ b/amo/examples/plot_q1d_scattering_amplitudes.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "3fc143c3",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,10 @@
     "inv_R3D = lambda B: inverse_effective_range(V3D(B), R0=R0_77_pm1, Vbg=Vbg_77_pm1)  # Function of V.\n",
     "\n",
     "V3D_m0 = partial(scattering_volume, B0=B0_77_0, DeltaB=DeltaB_77_0, Vbg=Vbg_77_0)  # Functions of B.\n",
-    "inv_R3D_m0 = lambda B: inverse_effective_range(V3D_m0(B), R0=R0_77_0, Vbg=Vbg_77_0)  # Function of V."
+    "inv_R3D_m0 = lambda B: inverse_effective_range(V3D_m0(B), R0=R0_77_0, Vbg=Vbg_77_0)  # Function of V.\n",
+    "\n",
+    "Eb3D = lambda B: pwave_bound_state_energy(V3D(B), inv_R3D(B))\n",
+    "Eb3D_m0 = lambda B: pwave_bound_state_energy(V3D_m0(B), inv_R3D_m0(B))"
    ]
   },
   {
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "5c8de2c9",
    "metadata": {},
    "outputs": [
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "699dd346",
    "metadata": {},
    "outputs": [
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "86035542",
    "metadata": {},
    "outputs": [
@@ -225,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d0bedb08",
    "metadata": {},
    "outputs": [
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "18c9a0c9",
    "metadata": {},
    "outputs": [
@@ -346,7 +349,7 @@
    "id": "3703b5cb",
    "metadata": {},
    "source": [
-    "## Quasi-two-dimensional scattering"
+    "## Quasi-two-dimensional scattering z-confinement"
    ]
   },
   {
@@ -354,7 +357,16 @@
    "execution_count": null,
    "id": "01586258",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q2D p-wave resonance at B = 198.574 G\n",
+      "q2D s-wave resonance at B = 199.647 G\n"
+     ]
+    }
+   ],
    "source": [
     "from amo.quantum_gas import oscillator_length\n",
     "from scipy.optimize import root_scalar\n",
@@ -365,28 +377,38 @@
     "inv_a_p = lambda B: q2d_inverse_pwave_scattering_area(V3D(B), inv_R3D(B), a_osc)\n",
     "ln_inv_r_p = lambda B: q2d_pwave_ln_inverse_effective_range(inv_R3D(B), a_osc)\n",
     "\n",
-    "\n",
-    "a_even = lambda B: q1d_even_scattering_length(V3D(B), inv_R3D(B), a_osc)\n",
-    "r_even = lambda B: q1d_even_effective_range(inv_R3D(B), a_osc)\n",
-    "\n",
-    "f_even = lambda Ek, B: 1/q1d_inverse_even_scattering_amplitude(np.sqrt(mK * Ek) / hbar, \n",
-    "                                                           a_even(B), r_even(B))\n",
+    "ln_a_s_sq = lambda B: q2d_swave_ln_scattering_length_squared(V3D_m0(B), inv_R3D_m0(B), a_osc)\n",
+    "r_s = lambda B: q2d_swave_effective_range(inv_R3D_m0(B), a_osc)\n",
     "\n",
     "\n",
-    "def q1d_resonant_field(resonance_zero, B_guess=199.0):\n",
-    "    root_results = root_scalar(resonance_zero, x0=B_guess, x1=B_guess+1.0)\n",
+    "def q2d_reference_field(mL, B_guess=199.0):\n",
+    "    E_shift = (1/2 + mL) * hbar * omega_perp\n",
+    "\n",
+    "    if mL == 0:\n",
+    "        zero_func = lambda B: Eb3D(B) + E_shift\n",
+    "    elif mL == 1:  # Use mL=0 res for s-wave case, since z-confinement\n",
+    "        zero_func = lambda B: Eb3D_m0(B) + E_shift \n",
+    "    else:\n",
+    "        raise ValueError(\"ell must be 0 or 1.\")\n",
+    "    \n",
+    "    root_results = root_scalar(zero_func, x0=B_guess, x1=B_guess+1.0)\n",
     "    return root_results.root\n",
     "\n",
     "\n",
-    "B_res_odd = q1d_resonant_field(inv_a_odd)\n",
-    "print(f\"Odd-wave resonance at B = {B_res_odd:.3f} G\")\n",
+    "B_ref_p = q2d_reference_field(0)\n",
+    "print(f\"q2D p-wave resonance at B = {B_ref_p:.3f} G\")\n",
     "\n",
-    "B_res_even = q1d_resonant_field(a_even)\n",
-    "print(f\"Even-wave x resonance at B = {B_res_even:.3f} G\")\n",
-    "\n",
-    "B_res_even_m0 = q1d_resonant_field(a_even_m0)\n",
-    "print(f\"Even-wave z resonance at B =\" + f\" {B_res_even_m0:.3f} G\")"
+    "B_ref_s = q2d_reference_field(1)\n",
+    "print(f\"q2D s-wave resonance at B = {B_ref_s:.3f} G\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "460751fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
