--- a/examples/plot_scattering_quantities.ipynb
+++ b/examples/plot_scattering_quantities.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9bf7176a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "\n",
     "import sys, os\n",
     "from pathlib import Path\n",
-    "sys.path.append(str(Path(os.getcwd()).parent.parent))\n",
+    "sys.path.append(str(Path(os.getcwd()).parent))\n",
     "\n",
     "from amo.constants import *\n"
    ]
@@ -427,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
