--- a/examples/plot_lattice_quantities.ipynb
+++ b/examples/plot_lattice_quantities.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "bccd2197",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
     }
    ],
    "source": [
-    "from lattice_deconfinement_calculations import deconfinement_data\n",
+    "from data.lattice.lattice_deconfinement_calculations import deconfinement_data\n",
     "\n",
     "# Lattice 1 trap frequency \n",
     "wz = 440  # Trap freq with no lattice\n",
