Some fixed plots

--- a/examples/test_blackman_transfer_hft_numerical_factors.ipynb
+++ b/examples/test_blackman_transfer_hft_numerical_factors.ipynb
@@ -52,8 +52,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "aec48386",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1973.9208802178716\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "R = 10\n",
+    "C = 1\n",
+    "\n",
+    "t = 1\n",
+    "\n",
+    "detuning = 2*np.pi**2/C**2 * R**2 * t**2\n",
+    "print(detuning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d4c31fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.471474419090953\n"
+     ]
+    }
+   ],
+   "source": [
+    "R = 10\n",
+    "C = 1\n",
+    "\n",
+    "# t = 0.1\n",
+    "\n",
+    "detuning = 15\n",
+    "# detuning = 2*np.pi**2/C**2 * R**2 * t**2\n",
+    "\n",
+    "t = np.sqrt(detuning * C**2 / (2*np.pi**2 * R**2))\n",
+    "print(1/t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f45535e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "11*12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "53fcc85b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.6689342403628125"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/0.42**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "69c09383",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17639999999999997"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.42**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20aa6948",
    "metadata": {},
    "outputs": [],
    "source": []
